--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-* Try Rack and Rack::Cache as web and web caching libraries
-* convert csv to JSON
+* Use Rack::Cache for caching
+* Add date markers.
 
