--- a/TODO
+++ b/TODO
@@ -1,2 +1,7 @@
 * Finish Drag implementation
+  o Count (and add up) drag events which are shorter than one hour
+  o Automatically load the previous month if it looks like we're going to need
+    to see days in the month before. 
 * Read up on proper HTTP cacheing (using etags or something), and replace what we've got.
+* Add UI for picking the month (or a date range or something)
+* Add UI for picking the weather station
